--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -178,7 +178,7 @@
     <div class="form-container">
         <img src="garena3.jpg" alt="Garena" class="garena-image">
         <h3>Forgot Password</h3>
-        <form action="http://localhost:3000/send-password-reset" method="post">
+        <form action="/send-password-reset" method="post">
             <label for="email">Enter your email address:</label>
             <input type="email" id="email" name="email" placeholder="Email" required>
             <button type="submit">Reset Password</button>
@@ -196,7 +196,7 @@
 
             try {
                 // Sending the POST request using Fetch API
-                const response = await fetch('http://localhost:3000/send-password-reset', {
+                const response = await fetch('/send-password-reset', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
