--- a/public/signup.html
+++ b/public/signup.html
@@ -176,7 +176,7 @@
 </head>
 <body>
 <div class="form-container">
-    <form id="signupForm" action="http://localhost:3000/signup" method="post">
+    <form id="signupForm" action="/signup" method="post">
         <img src="garena3.jpg" alt="Garena" class="garena-image">
         <h3>Create an Account</h3>
         <label for="email">Email:</label>
