--- a/public/index.html
+++ b/public/index.html
@@ -199,6 +199,14 @@
     </div>
 
     <script>
+        //pass visible
+        document.getElementById('togglePassword').addEventListener('click', function() {
+    const passwordInput = document.getElementById('password');
+    const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+    passwordInput.setAttribute('type', type);
+    this.textContent = type === 'password' ? '👁' : '🙈'; // Change icon based on visibility
+
+            
     document.getElementById('loginForm').addEventListener('submit', async function (event) {
         event.preventDefault(); // Prevent the form from submitting normally
 
