--- a/public/index.html
+++ b/public/index.html
@@ -238,7 +238,7 @@
             }
 
             // Fetch login request
-            fetch('/index', {
+            fetch('/login', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ email, password }),
