--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <style>
         body {
-            background-image: url('path/to/your-image.jpg');
+            background-image: url('akali.jpg');
             font-family: Arial, sans-serif;
             background-repeat: no-repeat;
             background-position: top center;
