--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -7,6 +7,7 @@
     
     <style>
         body {
+            background-image: url('leona.jpg');
             font-family: Arial, sans-serif;
             background-repeat: no-repeat;
             background-position: top center;
