--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
+            background-image: url('fiora.jpg');
             font-family: Arial, sans-serif;
             background-repeat: no-repeat;
             background-position: top center;
