--- a/public/forgot-password.html
+++ b/public/forgot-password.html
@@ -8,10 +8,9 @@
     <style>
         body {
             background-image: url('leona.jpg');
-            font-family: Arial, sans-serif;
             background-repeat: no-repeat;
             background-position: top center;
-            background-size: 500px 210px;
+            background-size: cover; /* Ensure the image covers the entire screen */
             background-color: #1e1e1e;
             color: #fff;
             display: flex;
@@ -19,7 +18,18 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-position: center 500px;
+        }
+
+        /* Center the form container */
+        .form-container {
+            background: rgba(255, 255, 255, 0.113); /* Semi-transparent background */
+            padding: 45px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.424);
+            max-width: 290px;
+            width: 100%;
+            position: relative;
+            z-index: 2; /* Ensure form stays above the background */
         }
 
         .form-container h3 {
@@ -27,15 +37,6 @@
             color: red;
             text-align: center;
             font-size: 30px;
-        }
-
-        .form-container {
-            background: rgba(255, 255, 255, 0.113);
-            padding: 45px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.424);
-            max-width: 290px;
-            width: 100%;
         }
 
         .form-container h2 {
@@ -48,7 +49,6 @@
             display: block;
             margin-bottom: 10px;
             color: #ccccccbd;
-          
             text-align: left;
         }
 
@@ -123,7 +123,7 @@
 
         .footer a {
             color: red;
-            text-decoration: none;    
+            text-decoration: none;
             font-size: 13px;
         }
 
