--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -36,6 +36,14 @@
     </div>
     
     <script>
+        //visibol
+document.getElementById('togglePassword').addEventListener('click', function() {
+    const passwordInput = document.getElementById('password');
+    const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+    passwordInput.setAttribute('type', type);
+    this.textContent = type === 'password' ? '👁' : '🙈'; // Change icon based on visibility
+
+    
 document.querySelector('#resetPasswordForm').addEventListener('submit', function(event) {
     event.preventDefault();  // Prevent form submission
 
