--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -36,52 +36,56 @@
     </div>
     
     <script>
-        //visibol
-document.getElementById('togglePassword').addEventListener('click', function() {
-    const passwordInput = document.getElementById('password');
-    const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-    passwordInput.setAttribute('type', type);
-    this.textContent = type === 'password' ? '👁' : '🙈'; // Change icon based on visibility
+        // Add event listener to toggle password visibility
+        document.getElementById('togglePassword').addEventListener('click', function() {
+            // Get the password input element
+            const passwordInput = document.getElementById('newPassword');
+            const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password'; // Toggle type
 
-    
-document.querySelector('#resetPasswordForm').addEventListener('submit', function(event) {
-    event.preventDefault();  // Prevent form submission
+            // Set the new type
+            passwordInput.setAttribute('type', type);
 
-    const resetKey = document.getElementById('resetKey').value;
-    const newPassword = document.getElementById('newPassword').value;
+            // Change the icon based on the password visibility
+            this.textContent = type === 'password' ? '👁' : '🙈'; // Change the icon when toggled
+        });
 
-    const payload = {
-        resetKey: resetKey,
-        newPassword: newPassword
-    };
+        document.querySelector('#resetPasswordForm').addEventListener('submit', function(event) {
+            event.preventDefault();  // Prevent form submission
 
-    console.log('Sending reset password request with payload:', payload);
+            const resetKey = document.getElementById('resetKey').value;
+            const newPassword = document.getElementById('newPassword').value;
 
-    // Send the data as JSON via Fetch API
-    fetch('/reset-password', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(payload)
-    })
-    .then(response => response.json())  // Parse the JSON response
-    .then(data => {
-        console.log('Server response:', data);  // Log the response from the server
+            const payload = {
+                resetKey: resetKey,
+                newPassword: newPassword
+            };
 
-        if (data.success) {  // Check if the response indicates success
-            alert('Password reset successfully! Redirecting to login...');
-            window.location.href = '/index.html';  // Ensure the correct URL for login page
-        } else {
-            alert('Failed to reset password: ' + data.message);
-        }
-    })
-    .catch(error => {
-        console.error('Error:', error);  // Log any errors
-        alert('An error occurred. Please try again later.');
-    });
-});
+            console.log('Sending reset password request with payload:', payload);
 
+            // Send the data as JSON via Fetch API
+            fetch('http://localhost:3000/reset-password', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(payload)
+            })
+            .then(response => response.json())  // Parse the JSON response
+            .then(data => {
+                console.log('Server response:', data);  // Log the response from the server
+
+                if (data.success) {  // Check if the response indicates success
+                    alert('Password reset successfully! Redirecting to login...');
+                    window.location.href = 'http://localhost:3000/index.html';  // Ensure the correct URL for login page
+                } else {
+                    alert('Failed to reset password: ' + data.message);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);  // Log any errors
+                alert('An error occurred. Please try again later.');
+            });
+        });
     </script>
 </body>
 </html>
