--- a/public/signup.html
+++ b/public/signup.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -182,10 +182,18 @@
         <h3>Create an Account</h3>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Create a password" required>
+        <div class="password-toggle">
+            <input type="password" id="password" name="password" placeholder="Create a password" required>
+            <span id="togglePassword" class="password-toggle-icon">👁</span>
+        </div>
+
         <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+        <div class="password-toggle">
+            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
+            <span id="toggleConfirmPassword" class="password-toggle-icon">👁</span>
+        </div>
 
         <button type="submit">Sign Up</button>
         <div class="footer">
@@ -193,7 +201,24 @@
         </div>
     </form>
 </div>
+
 <script>
+    // Toggle password visibility for the "Password" field
+    document.getElementById('togglePassword').addEventListener('click', function() {
+        const passwordInput = document.getElementById('password');
+        const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+        passwordInput.setAttribute('type', type);
+        this.textContent = type === 'password' ? '👁' : '🙈';
+    });
+
+    // Toggle password visibility for the "Confirm Password" field
+    document.getElementById('toggleConfirmPassword').addEventListener('click', function() {
+        const confirmPasswordInput = document.getElementById('confirmPassword');
+        const type = confirmPasswordInput.getAttribute('type') === 'password' ? 'text' : 'password';
+        confirmPasswordInput.setAttribute('type', type);
+        this.textContent = type === 'password' ? '👁' : '🙈';
+    });
+
     document.getElementById('signupForm').addEventListener('submit', function(event) {
         event.preventDefault();
         var email = document.getElementById('email').value.trim();
