--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -63,7 +63,7 @@
             console.log('Sending reset password request with payload:', payload);
 
             // Send the data as JSON via Fetch API
-            fetch('http://localhost:3000/reset-password', {
+            fetch('/reset-password', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -76,7 +76,7 @@
 
                 if (data.success) {  // Check if the response indicates success
                     alert('Password reset successfully! Redirecting to login...');
-                    window.location.href = 'http://localhost:3000/index.html';  // Ensure the correct URL for login page
+                    window.location.href = '/index.html';  // Ensure the correct URL for login page
                 } else {
                     alert('Failed to reset password: ' + data.message);
                 }
